<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PedidoActivity">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="10dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />



    <Spinner
        android:id="@+id/SP_categoria"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/bottom_bar"
        android:entries="@array/Categorías"
        app:layout_constraintBottom_toBottomOf="@+id/TV_categorias"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TV_categorias"
        app:layout_constraintTop_toTopOf="@+id/TV_categorias" />

    <Spinner
        android:id="@+id/SP_productos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/bottom_bar"
        app:layout_constraintBottom_toBottomOf="@+id/TV_productos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/SP_categoria"
        app:layout_constraintTop_toTopOf="@+id/TV_productos" />

    <Spinner
        android:id="@+id/SP_cantidade"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/bottom_bar"
        android:entries="@array/cantidade"
        app:layout_constraintBottom_toBottomOf="@+id/TV_productos2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/SP_productos"
        app:layout_constraintTop_toTopOf="@+id/TV_productos2" />

    <TextView
        android:id="@+id/TV_categorias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/categoria"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/TV_productos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/producto"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/TV_categorias"
        app:layout_constraintTop_toBottomOf="@+id/TV_categorias" />

    <TextView
        android:id="@+id/TV_productos2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cantidade"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/TV_productos"
        app:layout_constraintTop_toBottomOf="@+id/TV_productos" />

    <Button
        android:id="@+id/BTN_siguiente"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="siguiente"
        android:text="@string/seguinte"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>